Fixed left padding issue on mobile

--- a/css/spec.css
+++ b/css/spec.css
@@ -161,6 +161,15 @@ footer {
     	float:none;
     	text-align: center;
     }
+    #header-wrap {
+    	width:95%;
+    }
+    #content-wrap {
+    	width:95%;
+    }
+    .sec {
+    	padding-left: 0;
+    }
     nav {
     	float:none;
     	text-align: center;
